@@ -1,3 +1,7 @@
+2015-05-04  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Adding options for (average) error interpolation and ipol persistency to prof-ipol and module functions.
+
 2015-05-03  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Add bin/prof-ipol simple script using the functions below -- to be merged with prof-interpolate.
